--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,6 @@
         Nevada<br />
         USA<br />
         </p>
-        <a href="https://www.google.com/maps/@42.9533915,-77.663256,3a,75y,84.91h,40.44t/data=!3m6!1e1!3m4!1sGIOv86zJO8zAy3hLR3jdXQ!2e0!7i3328!8i1664?hl=en">Google
-        map link</a>
+        <a href="https://www.google.com/maps/@42.9533915,-77.663256,3a,75y,84.91h,40.44t/data=!3m6!1e1!3m4!1sGIOv86zJO8zAy3hLR3jdXQ!2e0!7i3328!8i1664?hl=en">Googl map link</a>
     </body>
 </html>
